fix hint content overflowing the screen in pac lookup mobile screen (#651)
* fix hint content overflowing the screen in pac lookup mobile screen

* makes heading responsive on pac lookup screen

--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -20,7 +20,14 @@ h3 {
   margin-top: 0.25em;
   margin-bottom: 0.25em;
 }
-
+h1.ant-typography {
+  @media (max-width: 560px) {
+    font-size: 2em;
+  }
+  @media (max-width: 420px) {
+    font-size: 1.5em;
+  }
+}
 h1 + h2 {
   margin-top: 0;
   margin-bottom: 0.5em;
